BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Account_Plan_vod__c.object
<CustomObject>
    <description>This object stores all Account Plan header data</description>
    <fields>
        <fullName>Account_Goal_BMS_CORE__c</fullName>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Priorities_BMS_US__c</fullName>
        <label>Account Priorities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to master account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Plan_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if account plan is active.  Must be checked to be utilized in a Meeting Brief.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affordable_care_act_Quick_Summary_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Affordable care act - Quick Summary:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account Primary Benefit Design for MM users</description>
        <inlineHelpText>What is this account’s predominant benefit design (What are the average co-pays and/or co-insurance)?</inlineHelpText>
        <label>Benefit Design</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Books_of_Business_Lives_BMS_US__c</fullName>
        <inlineHelpText>Commercial Lives, Medicare Lives, Managed Medicaid Lives</inlineHelpText>
        <label>Books of Business Lives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Strategy_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s business strategy for MM users</description>
        <inlineHelpText>What is the account’s business strategy for 2013 and beyond?</inlineHelpText>
        <label>Business Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPOE_BMS_US__c</fullName>
        <label>CPOE</label>
        <picklist>
            <picklistValues>
                <fullName>Epic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AllScripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CentralLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medworxx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Focus Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeleTracking Technologies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPOE_Comments_BMS_US__c</fullName>
        <label>CPOE Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_1_ADAP_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Comments:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_1_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_2_ADAP_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Comments:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_2_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_3_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_or_Landscape_Considerations_BMS__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Comments or Landscape Considerations:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Plan_Tactics_vod__c</fullName>
        <label>Completed Plan Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_BMS_LATAM__c</fullName>
        <description>VPRO LATAM Apr-2015: Used for the Sharing Rules, filled out by a Workflow based on the value of the Account Source Country Field</description>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Drivers_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s economic/clinical drivers for MM users</description>
        <inlineHelpText>What economic/clinical drivers are important to this account?</inlineHelpText>
        <label>Customer Drivers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of account plan.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disease_States_1_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Disease State(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Transplant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disease_States_2_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Disease State(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Transplant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disease_States_3_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Disease State(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Transplant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dollar_Amt_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Dollar Amt:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dual_Eligibles_BMS_US__c</fullName>
        <formula>Account_vod__r.Duals_BMS_US__c</formula>
        <label>Dual Eligibles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FFS_Medicaid_BMS_US__c</fullName>
        <formula>Account_vod__r.FFS_Medicaid_BMS_US__c</formula>
        <label>FFS Medicaid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Overview_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current financial situation for MM users</description>
        <inlineHelpText>Comment on the Account current financial situation</inlineHelpText>
        <label>Financial Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Date_BMS_US__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geographic_Reach_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s local/regional/national reach for MM users</description>
        <inlineHelpText>Local, Regional, National</inlineHelpText>
        <label>Geographic Reach</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIV_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current HIV pharmacy risk for MM users</description>
        <label>HIV</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Lives_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>(If yes) Lives:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indication_BMS_CORE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product/Disease State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_vod__c.Product_Type_vod__c</field>
                <operation>equals</operation>
                <value>Detail</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_continuatio_program_ICP_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Insurance continuation program (ICP):</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Contacts_Decision_Makers_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s key contacts for MM users</description>
        <inlineHelpText>Who are the key contacts?</inlineHelpText>
        <label>Key Contacts/Decision Makers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Customers_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s key customers for MM users</description>
        <inlineHelpText>Who are the account’s key customers?</inlineHelpText>
        <label>Key Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lives_1_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lives_2_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lives_3_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCO_Name_1_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>MCO Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCO_Name_2_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>MCO Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCO_Name_3_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>MCO Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Medicaid_Lives_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account Managed Medicaid Lives info from the Account Profile Enrollment Section for MM users</description>
        <formula>Account_vod__r.Managed_Medicaid_BMS_US__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Medicaid Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicaid_BMS_US__c</fullName>
        <formula>Account_vod__r.Medicaid__c</formula>
        <label>Medicaid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicaid_Expansion_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Medicaid Expansion:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medicare_Lives_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Tracking the Account Medicare Lives info from the Account Profile Enrollment Section for MM users</description>
        <formula>Account_vod__r.Medicare__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medicare Lives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_MCOS_within_this_state_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current number of MCOs  for MM users</description>
        <label>Number of MCOS within this state?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_priority_MCOs_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current number of priority MCOs  for MM users</description>
        <label>Number of priority MCOs?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oncology_Infused_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current Oncology (Infused) pharmacy risk for MM users</description>
        <label>Oncology (Infused)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oncology_Oral_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current Oncology (Oral) pharmacy risk for MM users</description>
        <label>Oncology (Oral)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>SWOT: Opportunities</description>
        <label>Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current Other pharmacy risks for MM users</description>
        <label>Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_key_factors_if_applicable_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Other key factors (if applicable):</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PBM_1_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>PBM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBM_2_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>PBM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBM_3_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>PBM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_1_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Parent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_2_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Parent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_3_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Parent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Percent:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percent Complete</description>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Tactic_Progress_vod__c</fullName>
        <label>Strategy Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Poverty_level_impact_concerns_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <inlineHelpText>Any concerns regarding the federal poverty level&apos;s impact on state medicaid? Please comment if applicable.</inlineHelpText>
        <label>Poverty level impact concerns?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prioritization_BMS_CORE__c</fullName>
        <label>Prioritization</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_BMS_US__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>BYDUREON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYMLIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABILIFY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELIQUIS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_1_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_2_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_3_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current priority MCO information for MM users</description>
        <label>Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of account plan.  The field is used in the workflow approval process.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>SWOT: Strengths</description>
        <label>Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>SWOT: Threats</description>
        <label>Threats</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Date_BMS_US__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Clients_Served_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Total Clients Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lives_BMS_US__c</fullName>
        <formula>Account_vod__r.Total_Lives__c</formula>
        <label>Total Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Plan_Tactics_vod__c</fullName>
        <label>Total Strategies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of account plan such as National, Regional or Local.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vision_BMS_CORE__c</fullName>
        <label>Vision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wait_list_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the Account&apos;s current ADAP and other medicaid consideration information for MM users</description>
        <label>Wait list?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>SWOT: Weaknesses</description>
        <label>Weaknesses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan_vod</fullName>
        <active>true</active>
        <description>Base record type for Account Plans</description>
        <label>Account_Plan_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Account_Business_Plan</fullName>
        <active>true</active>
        <label>BMS - Account Business Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CAN_KAM</fullName>
        <active>true</active>
        <description>BMS Canada KAM Account Plan Record Type</description>
        <label>BMS - CAN - KAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Individual_Account_Plan</fullName>
        <active>true</active>
        <description>BMS - Individual Account Plan</description>
        <label>BMS - Individual Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_KAM_CORE</fullName>
        <active>true</active>
        <label>BMS KAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_State_Triad_Plan</fullName>
        <active>true</active>
        <label>BMS - State Triad Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_US_CV_KAM_Account_Plan</fullName>
        <active>true</active>
        <description>Account Plan for CV KAMs</description>
        <label>BMS - US - CV KAM Account Plan</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>